--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-cookies.js"></script>
   <script src="app.js"></script>
   <script src="app-services/authentication-service.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsnlog/2.17.1/jsnlog.js" ></script>
+  <script src="app-services/logToServer.module.js"></script>
+
+  
 </body>
 </html>
