refactoring in progress..

--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 
 </head>
 <body>
-  header
-  <a href="/#/">home</a>
-  <a href="/#/contact">contact</a>
 
   <div ng-include="'app/components/header/headerView.html'"></div>
   <div ng-view></div>
@@ -34,6 +31,8 @@
   <script src="app/logToServer.module.js"></script>
   <!-- AngularJS components -->
   <script src="app/components/contact/contactController.js"></script>
+  <!-- AngularJS shared -->
+  <script src="app/shared/pwCheck/pwCheck.js"></script>
 
 
 
