--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-  <div ng-include="'app/components/header/headerView.html'"></div>
+  <div ng-include="'app/components/header/header.view.html'"></div>
   <div ng-view></div>
-  <div ng-include="'app/components/footer/footerView.html'"></div>
+  <div ng-include="'app/components/footer/footer.view.html'"></div>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -26,13 +26,16 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-route.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-cookies.js"></script>
+  <script src="app/logToServer.module.js"></script>
   <script src="app/app.module.js"></script>
   <script src="app/app.routes.js"></script>
-  <script src="app/logToServer.module.js"></script>
   <!-- AngularJS components -->
-  <script src="app/components/contact/contactController.js"></script>
-  <!-- AngularJS shared -->
-  <script src="app/shared/pwCheck/pwCheck.js"></script>
+  <script src="app/components/header/header.controller.js"></script>
+  <script src="app/components/contact/contact.controller.js"></script>
+  <script src="app/components/user/auth.service.js"></script>
+  <script src="app/components/user/user.controller.js"></script>
+  <!-- AngularJS shared (directives) -->
+  <script src="app/shared/pwCheck/pwCheck.directive.js"></script>
 
 
 
