--- a/index.html
+++ b/index.html
@@ -8,24 +8,23 @@
   <title>Cirrus Captive-Portal</title>
   <!-- Bootstrap -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <!-- ngToast -->
+  <link href="assets/css/ngToast.min.css" rel="stylesheet">
+  <link href="assets/css/ngToast-animations.min.css" rel="stylesheet">
 
 </head>
 <body>
+  <toast></toast>
 
-  <div ng-include="'app/components/header/header.view.html'"></div>
+  <!-- Header and Footer and included in each view in order to manage the $route.reload() function -->
   <div ng-view></div>
-  <div ng-include="'app/components/footer/footer.view.html'"></div>
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="assets/js/bootstrap.min.js"></script>
-  <!-- jSNLog for Agnular -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsnlog/2.17.1/jsnlog.js" ></script>
   <!-- AngularJS -->
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-route.min.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-cookies.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-animate.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-sanitize.min.js"></script>
   <script src="app/logToServer.module.js"></script>
   <script src="app/app.module.js"></script>
   <script src="app/app.routes.js"></script>
@@ -36,6 +35,15 @@
   <script src="app/components/user/user.controller.js"></script>
   <!-- AngularJS shared (directives) -->
   <script src="app/shared/pwCheck/pwCheck.directive.js"></script>
+  <script src="app/shared/plan/myPlan.directive.js"></script>
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/ngToast.min.js"></script>
+  <!-- jSNLog for Agnular -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsnlog/2.17.1/jsnlog.js" ></script>
 
 
 
