--- a/index.html
+++ b/index.html
@@ -16,15 +16,22 @@
 <body>
   <toast></toast>
 
-  <!-- Header and Footer and included in each view in order to manage the $route.reload() function -->
-  <div ng-view></div>
+  <header>
+      <div ui-view="header"></div>
+  </header>
+
+  <div ui-view="content">Loading ...</div>
+
+  <footer>
+      <div ui-view="footer"></div>
+  </footer>
 
   <!-- AngularJS -->
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-route.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-cookies.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-animate.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-sanitize.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular.min.js"></script>
+  <!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-route.min.js"></script>-->
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-cookies.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-animate.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-sanitize.min.js"></script>
   <script src="app/logToServer.module.js"></script>
   <script src="app/app.module.js"></script>
   <script src="app/app.routes.js"></script>
@@ -32,6 +39,7 @@
   <script src="app/components/header/header.controller.js"></script>
   <script src="app/components/contact/contact.controller.js"></script>
   <script src="app/components/user/auth.service.js"></script>
+  <script src="app/components/user/session.service.js"></script>
   <script src="app/components/user/user.controller.js"></script>
   <!-- AngularJS shared (directives) -->
   <script src="app/shared/pwCheck/pwCheck.directive.js"></script>
@@ -42,6 +50,7 @@
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="assets/js/bootstrap.min.js"></script>
   <script src="assets/js/ngToast.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
   <!-- jSNLog for Agnular -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jsnlog/2.17.1/jsnlog.js" ></script>
 
