working ui-router

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
   <!-- AngularJS components -->
   <script src="app/components/header/header.controller.js"></script>
   <script src="app/components/contact/contact.controller.js"></script>
-  <script src="app/components/user/auth.service.js"></script>
+  <!--<script src="app/components/user/auth.service.js"></script>
   <script src="app/components/user/session.service.js"></script>
-  <script src="app/components/user/user.controller.js"></script>
+  <script src="app/components/user/user.controller.js"></script>-->
+  <script src="app/components/auth/auth.service.js"></script>
+  <script src="app/components/auth/user.service.js"></script>
+  <script src="app/components/auth/user.controller.js"></script>
   <!-- AngularJS shared (directives) -->
   <script src="app/shared/pwCheck/pwCheck.directive.js"></script>
   <script src="app/shared/plan/myPlan.directive.js"></script>
