--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   <script src="app/components/auth/auth.service.js"></script>
   <script src="app/components/auth/user.service.js"></script>
   <script src="app/components/auth/user.controller.js"></script>
+  <script src="app/components/account/account.controller.js"></script>
   <!-- AngularJS shared (directives) -->
   <script src="app/shared/pwCheck/pwCheck.directive.js"></script>
   <script src="app/shared/plan/myPlan.directive.js"></script>
